--- a/irynadzyndra-web/src/assets/i18n/ua.json
+++ b/irynadzyndra-web/src/assets/i18n/ua.json
@@ -32,9 +32,13 @@
   "Joint14": "2019 - Новорічна виставка ,Галерея «Зелена канапа», Львів, Україна;",
   "Joint15": "2019 - Різдвяна виставка, Галерея «Велес», Львів, Украіна;",
   "Joint16": "2020 - Арт проєкт «вARTе» , Галерея «Світовид», Коломия, Україна.",
+  "Joint17": "2020 - мистецький проєкт 'вARTе' , живопис , Львівський Органний Зал , Львів , Україна;",
+  "Joint18": "2020 - мистецький проєкт 'вARTе' , 'живопис під відкритим небом', Львівська область , Україна.",
+  "linesText": "Лінія - риска, смужка, межа, довжина, пряма, геометричний об‘єкт за визначенням. Лінія окреслює межі, вказує напрям, визначає порядок. Лінії горизонту, кордони країн, межі особистого простору , межі здорового глузду . Здавалось би , зрозуміла конструкція . Проте , наскільки вона непорушна та наскільки вона реальна чи уявна ? Лінії на полотнах будують композицію, формують бачення, демонструють та ілюструють уявлення; процеси пошуку відповідей, розуміння навколишності та самоусвідомлення. Можливо , найважливіші питання є риторичні , а , може , очевидно прості…  Можливо , самі роздуми про це і є відповіддю …",
   "horizonText": "серія графічних  творів, виконаних авторською технікою аквареллю на папері,із застосуванням принтувань та колажуваннь , об’єднаних темою персоніфікації  пейзажу, дослідження його суті. Відчуття. переживання і осмислення життєвих порухів Землі,її дихання і метаморфози,багатогранність і глибинний божественний зміст. Неосяжні образи  закликають мандрувати просторами ,уважно вивчаючи та прислухаючись, переймаючись  вразливістю та величчю . Встановлення зв’язку між  світоглядними орієнтирами  людини, активних трансформацій  довколишнього світу та  невичерпної благодатної гармонії живої природи.",
   "terravitaText": "серія живописних  творів ,виконаних авторською технікою, акрилом на полотні, об’єднаних темою персоніфікації пейзажу, дослідження його суті. Відчуття. переживання і осмислення життєвих порухів Землі.Її дихання,метаморфози,багатогранність і глибинний божественний зміст. Неосяжні образи  закликають мандрувати просторами ,уважно вивчаючи та прислухаючись, переймаючись  вразливістю та величчю . Встановлення зв’язку між  світоглядними орієнтирами  людини, активних трансформацій  довколишнього світу та  невичерпної благодатної гармонії живої природи.",
   "seineText": "cерія живописних робіт, виконаних олією на полотні. Етюди Парижа, створені за мотивами книги спогадів Е.Хемінгуея «Свято, яке  завжди з тобою». Не переслідуючи мету безпосереднього ілюстрування твору, однак бажання передати почуття та емоції, настрій міста. Париж,з його вулицями, будинками і садами, скверами та площами, крамницями, кав’ярнями, набережними, Сеною – узалежнює і невідпускає. Насиченість мистецтвом в кожному фрагменті, краса повсякденного життя у кожному куточку. В яскравому сонці і в м’яких сутінках, в світлі, в шумі,в пахощах -  відкривається,для кожного по-своєму ідеальне, найромантичніше місто в світі. Відображаючись в Сені, місто постає по-особливому загадковим. Проявляється та сама паризька поетичність, мерехтлива тендітність, якась гіпнотична незбагненність. Без чітких контурів, щедро прикрашене блискітками від хвиль, кокетує і бавиться з річкою, а та, в свою чергу незрадливо несе в собі всі його таємниці.",
+  "linesName:": "ЛІНІЇ",
   "horizonName":"ГОРИЗОНТ",
   "terravitaName":"TERRAVITA",
   "seineName":"Історії  Сени",
@@ -46,6 +50,23 @@
   "placeholderLastName": "Прізвище",
   "placeholderEmail": "Твоя електрона пошта",
   "placeholderMessage": "Твоє повідомлення",
+  "imagesLinesNotes": [
+    "a",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    ""
+  ],
   "imagesHorizonNotes":[
     "«Озеро великого ведмедя», 28 х 19 см, акварель на папері,принт,авторська техніка, 2015",
     " «Орівесі» , 28 х 19 см, акварель на папері,2014",
