--- a/irynadzyndra-web/src/assets/i18n/en.json
+++ b/irynadzyndra-web/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "hom": "home",
   "gallery": "gallery",
+  "lines": "lines",
   "horizon": "horizon",
   "terravita": "terravita",
   "cv": "cv",
@@ -32,9 +33,13 @@
   "Joint14": "2019 - New Year's Exhibition, Green Sofa Gallery, Lviv, Ukraine;",
   "Joint15": "2019 - Christmas Exhibition. 'Veles' Gallery,Lviv, Ukraine;",
   "Joint16": "2020 - Art project 'вARTе' , 'Svitovyd' Gallery, Kolomyya, Ukraine.",
+  "Joint17": "2020 - art project 'вARTe', painting, Lviv Organ Hall, Lviv, Ukraine;",
+  "Joint18": "2020 - art project 'вARTe', 'painting in the open air', Lviv region, Ukraine.",
+  "linesText:": "Line: dash, stripe, limit, length, straight, a geometric object by definition. Line outlines the boundaries, indicates the direction, determines the order. Skylines, borders of the countries, personal boundaries, borders of common sense. One would think that the structure is well-defined. How inviolable and how imaginary is it however? Lines on canvases build composition, form visions, demonstrate and illustrate ideas; processes of finding answers, understanding the environment, and self-awareness. Perhaps the most important questions are rhetorical, and perhaps they are obviously simple… Perhaps the very thinking of this is the answer…",
   "horizonText": "a series of graphic works made in the author's technique in watercolors on paper with application of prints and collaging, united by the theme of personification of the landscape, study of its essence. Feelings, emotions,  understanding of multifacetedness and the deep divine content.  Boudless images  call for the journeys in space diligently studying and establishing the  ties between the worldoutlook landmarks of man, active transformations of the surrounding world and inexhaustible blessed harmony of the living nature.",
   "terravitaText": "a  series of paintings executed in author's technique in acryl on canvas, united by the theme of personification of the landscape, study of its essence. Feelings, emotions,  understanding of multifacetedness and the deep divine content.  Boudless images  call for the journeys in space diligently studying and establishing the  ties between the worldoutlook landmarks of man, active transformations of the surrounding world and inexhaustible blessed harmony of the living nature.",
   "seineText": "a series of oil paintings on canvas. Sketches of Paris inspired by the book of memoirs of Ernest Hemingway “The moveable Feast”. Without intending to illustrate the book but willing to transmit the feeling of sensations and emotions, the mood of the city. Paris, with its streets, buildings and gardens,  parks and squares, shops, coffee bars, embankments, the Seine river – enchants  and does not let you go. Abundance of art in every fragment, beauty of everyday life in every corner. In the bright sun and in the soft twilight, noise, aromas – opens up in its way to everyone the ideal, most romantic city in the world. Reflecting in the Seine  the city becomes especially mysterious. The very Parisian aura of poetic sentiment, flickering exquisiteness, some hypnotic enchantment come to light. Without clear contours, richly decorated with sparkles of rippled water, the city is flirting and playing  with the river and the river carries away all its secrets.",
+  "linesName:": "LINES",
   "horizonName": "HORIZON",
   "terravitaName": "TERRAVITA",
   "seineName": "The Seine stories",
@@ -46,6 +51,23 @@
   "placeholderLastName": "Last Name",
   "placeholderEmail": "Your email",
   "placeholderMessage": "Your message",
+  "imagesLinesNotes": [
+    "a",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    ""
+  ],
   "imagesHorizonNotes": [
     "«The Great Bear Lake», 28 ч 19 сm,watercolor on paper,print,author`s technique, 2015",
     "« Orivesi» 28 ч 19 сm,watercolor on paper,2014",
@@ -62,10 +84,6 @@
     "«Volyn plain», 28 ч 19 сm,watercolor on paper,print,author`s technique, 2015"
   ],
   "imagesTerravitaNotes": [
-    "«Dnipro», diptych 50 x 55 cm + 50 x 60 cm , oil on canvas , 2020",
-    "«Ukrainian siesta», 70 х 100 сm , oil on canvas, 2020",
-    "«5.30 a.m», 70 x 100 cm , oil on canvas, 2020",
-    "«Marsian landscape», 55 x 65 cm , oil on canvas , 2020",
     "«Low Tatras»,  55 х 65 cm, oil on canvas, 2019",
     "«The silent steppe», 60 х 80 cm, oil on canvas, 2019",
     "«Pag іsland», 80  х 120 cm, acrylic on canvas, 2018",
