--- a/irynadzyndra-web/src/assets/i18n/en.json
+++ b/irynadzyndra-web/src/assets/i18n/en.json
@@ -35,11 +35,11 @@
   "Joint16": "2020 - Art project 'вARTе' , 'Svitovyd' Gallery, Kolomyya, Ukraine.",
   "Joint17": "2020 - art project 'вARTe', painting, Lviv Organ Hall, Lviv, Ukraine;",
   "Joint18": "2020 - art project 'вARTe', 'painting in the open air', Lviv region, Ukraine.",
-  "linesText:": "Line: dash, stripe, limit, length, straight, a geometric object by definition. Line outlines the boundaries, indicates the direction, determines the order. Skylines, borders of the countries, personal boundaries, borders of common sense. One would think that the structure is well-defined. How inviolable and how imaginary is it however? Lines on canvases build composition, form visions, demonstrate and illustrate ideas; processes of finding answers, understanding the environment, and self-awareness. Perhaps the most important questions are rhetorical, and perhaps they are obviously simple… Perhaps the very thinking of this is the answer…",
+  "linesText": "Line: dash, stripe, limit, length, straight, a geometric object by definition. Line outlines the boundaries, indicates the direction, determines the order. Skylines, borders of the countries, personal boundaries, borders of common sense. One would think that the structure is well-defined. How inviolable and how imaginary is it however? Lines on canvases build composition, form visions, demonstrate and illustrate ideas; processes of finding answers, understanding the environment, and self-awareness. Perhaps the most important questions are rhetorical, and perhaps they are obviously simple… Perhaps the very thinking of this is the answer…",
   "horizonText": "a series of graphic works made in the author's technique in watercolors on paper with application of prints and collaging, united by the theme of personification of the landscape, study of its essence. Feelings, emotions,  understanding of multifacetedness and the deep divine content.  Boudless images  call for the journeys in space diligently studying and establishing the  ties between the worldoutlook landmarks of man, active transformations of the surrounding world and inexhaustible blessed harmony of the living nature.",
   "terravitaText": "a  series of paintings executed in author's technique in acryl on canvas, united by the theme of personification of the landscape, study of its essence. Feelings, emotions,  understanding of multifacetedness and the deep divine content.  Boudless images  call for the journeys in space diligently studying and establishing the  ties between the worldoutlook landmarks of man, active transformations of the surrounding world and inexhaustible blessed harmony of the living nature.",
   "seineText": "a series of oil paintings on canvas. Sketches of Paris inspired by the book of memoirs of Ernest Hemingway “The moveable Feast”. Without intending to illustrate the book but willing to transmit the feeling of sensations and emotions, the mood of the city. Paris, with its streets, buildings and gardens,  parks and squares, shops, coffee bars, embankments, the Seine river – enchants  and does not let you go. Abundance of art in every fragment, beauty of everyday life in every corner. In the bright sun and in the soft twilight, noise, aromas – opens up in its way to everyone the ideal, most romantic city in the world. Reflecting in the Seine  the city becomes especially mysterious. The very Parisian aura of poetic sentiment, flickering exquisiteness, some hypnotic enchantment come to light. Without clear contours, richly decorated with sparkles of rippled water, the city is flirting and playing  with the river and the river carries away all its secrets.",
-  "linesName:": "LINES",
+  "linesName": "LINES",
   "horizonName": "HORIZON",
   "terravitaName": "TERRAVITA",
   "seineName": "The Seine stories",
@@ -52,21 +52,20 @@
   "placeholderEmail": "Your email",
   "placeholderMessage": "Your message",
   "imagesLinesNotes": [
-    "a",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
+    "'Sunrise', 100 x 150 cm , oil on canvas , 2022",
+    "'Goverla', diptych  100 x 200 cm , oil on canvas , 2022",
+    "'Dnipro', diptych 50 x 125 cm , oil on canvas , 2020",
+    "'Ukrainian siesta', 70 x 100 cm , oil on canvas , 2020",
+    "'Green May', 70 x 100 cm , oil on canvas , 2021",
+    "'Green July', 70 x 100 cm , iol on canvas , 2021",
+    "'5 am',  70 x 100 cm , oil on canvas , 2020",
+    "'3.30 p.m.' , 70 x 100 cm , oil on canvas , 2020",
+    "'Olympus', 80 x 100 , oil on canvas , 2021",
+    "'Blind rain', 40 x 50 cm , oil on canvas , 2020",
+    "'Everest', 50 x 60 cm , oil on canvas , 2021",
+    "'Horizon 21', diptych 60 x 120 cm , oil on canvas , 2021",
+    "'Green card', diptych 50 x 100  cm , oil on canvas",
+    "'Martian landscape', 55 x 65  cm , oil on canvas , 2020"
   ],
   "imagesHorizonNotes": [
     "«The Great Bear Lake», 28 ч 19 сm,watercolor on paper,print,author`s technique, 2015",
