--- a/irynadzyndra-web/src/assets/i18n/ua.json
+++ b/irynadzyndra-web/src/assets/i18n/ua.json
@@ -38,7 +38,7 @@
   "horizonText": "серія графічних  творів, виконаних авторською технікою аквареллю на папері,із застосуванням принтувань та колажуваннь , об’єднаних темою персоніфікації  пейзажу, дослідження його суті. Відчуття. переживання і осмислення життєвих порухів Землі,її дихання і метаморфози,багатогранність і глибинний божественний зміст. Неосяжні образи  закликають мандрувати просторами ,уважно вивчаючи та прислухаючись, переймаючись  вразливістю та величчю . Встановлення зв’язку між  світоглядними орієнтирами  людини, активних трансформацій  довколишнього світу та  невичерпної благодатної гармонії живої природи.",
   "terravitaText": "серія живописних  творів ,виконаних авторською технікою, акрилом на полотні, об’єднаних темою персоніфікації пейзажу, дослідження його суті. Відчуття. переживання і осмислення життєвих порухів Землі.Її дихання,метаморфози,багатогранність і глибинний божественний зміст. Неосяжні образи  закликають мандрувати просторами ,уважно вивчаючи та прислухаючись, переймаючись  вразливістю та величчю . Встановлення зв’язку між  світоглядними орієнтирами  людини, активних трансформацій  довколишнього світу та  невичерпної благодатної гармонії живої природи.",
   "seineText": "cерія живописних робіт, виконаних олією на полотні. Етюди Парижа, створені за мотивами книги спогадів Е.Хемінгуея «Свято, яке  завжди з тобою». Не переслідуючи мету безпосереднього ілюстрування твору, однак бажання передати почуття та емоції, настрій міста. Париж,з його вулицями, будинками і садами, скверами та площами, крамницями, кав’ярнями, набережними, Сеною – узалежнює і невідпускає. Насиченість мистецтвом в кожному фрагменті, краса повсякденного життя у кожному куточку. В яскравому сонці і в м’яких сутінках, в світлі, в шумі,в пахощах -  відкривається,для кожного по-своєму ідеальне, найромантичніше місто в світі. Відображаючись в Сені, місто постає по-особливому загадковим. Проявляється та сама паризька поетичність, мерехтлива тендітність, якась гіпнотична незбагненність. Без чітких контурів, щедро прикрашене блискітками від хвиль, кокетує і бавиться з річкою, а та, в свою чергу незрадливо несе в собі всі його таємниці.",
-  "linesName:": "ЛІНІЇ",
+  "linesName": "ЛІНІЇ",
   "horizonName":"ГОРИЗОНТ",
   "terravitaName":"TERRAVITA",
   "seineName":"Історії  Сени",
@@ -51,21 +51,20 @@
   "placeholderEmail": "Твоя електрона пошта",
   "placeholderMessage": "Твоє повідомлення",
   "imagesLinesNotes": [
-    "a",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
+    "'Схід сонця ', 100 x 150 см , олія на полотні , 2022",
+    "'Говерла', диптих 100 х 200 см , олія на полотні , 2022",
+    "'Дніпро', диптих 50 х 125 см , олія на полотні , 2020",
+    "'Українська сієста', 70 х 100 см , олія на полотні , 2020",
+    "'Зелений травень', 70 x 100 cм , олія на полотні , 2021",
+    "'Зелений липень', 70 x 100 см , олія на полотні , 2021",
+    "'5. 00',  70 x 100 см , олія на полотні , 2020",
+    "'15.30' ,70 х 100 см ,олія на полотні , 2020",
+    "'Олімп', 80 x 100 см , олія на полотні , 2021",
+    "'Сліпий дощ', 40 x 50 см , олія на полотні , 2020",
+    "'Еверест', 50 х 60 см , олія на полотні , 2021",
+    "'Горизонт 21', диптих 60 х 120 см , олія на полотні , 2021",
+    "'Зелена карта', диптих 50 х 100 см , олія на полотні , 2021",
+    "'Марсіанський краєвид', 55 х 65 см , олія на полотні , 2020"
   ],
   "imagesHorizonNotes":[
     "«Озеро великого ведмедя», 28 х 19 см, акварель на папері,принт,авторська техніка, 2015",
